--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "npm run build && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "firebase": "^5.5.6",
+    "vue": "^2.5.2",
+    "vuefire": "^2.0.0-alpha.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
