--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^3.7.0",
+    "hls.js": "^0.11.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0",
-    "firebase": "^3.7.0",
-    "vuefire": "^1.3.1"
+    "vuefire": "^1.3.1",
+    "vuetify": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
