--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "firebase": "^3.7.0",
     "hls.js": "^0.11.0",
+    "video.js": "^7.2.4",
+    "videojs-markers": "^1.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue.js": "^0.3.2",
     "vuefire": "^1.3.1",
     "vuetify": "^1.0.0"
   },
